Allow devices to wait for commands
